--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -32,24 +32,26 @@ uel.svn.url="https://uel.dev.java.net/svn/uel/tags/2.2"
 jstl.svn.url="https://jstl.dev.java.net/svn/jstl/tags/1.2.1"
 grizzly.svn.url="https://grizzly.dev.java.net/svn/grizzly/tags/1_9_19_beta6"
 scripting.svn.url="https://glassfish-scripting.dev.java.net/svn/glassfish-scripting/tags/rails-1.0-b09"
-javassist.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/javassist/3.11.0.GA"
-javassist.version="3.11.0.GA"
+javassist.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/javassist/3.14.0.GA"
+javassist.version="3.14.0.GA"
 googlecollections.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/google-collections/1.0"
 googlecollections.version="1.0"
+guava-libraries.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/guava-libraries/release06"
+guava-libraries.version="release06"
 log4j.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/log4j/1.2.14/v1_2_14_maven"
 xml-apis.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/xml-apis/1.0.b2"
 dom4j.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/dom4j/1.6.1"
 jboss-interceptor-api.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/jboss-interceptors-api/1.1"
 jboss-interceptor-api.version="1.1"
-weld-api.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/weld/api/1.1.0-01-glassfish"
-weld-api.version="1.1.0-01-glassfish"
-weld-spi.version="1.1.0-01-glassfish"
-cdi-api.version="1.0-SP1"
-weld-core.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/weld/core/1.1.0-01-glassfish"
+weld-api.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/weld/api/1.1.Beta2"
+weld-api.version="1.1.Beta2"
+weld-spi.version="1.1.0.Beta2"
+cdi-api.version="1.0-SP3"
+weld-core.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/weld/core/1.1.0.Beta2"
 javax-inject.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/javax-inject/1"
 javax-inject.version="1"
-jboss-interceptor.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/jboss-interceptor-parent-1.0.0-CR11"
-jboss-interceptor.version="1.0.0-CR11"
+jboss-interceptor.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/jboss-interceptors/2.0.0.Alpha3"
+jboss-interceptor.version="2.0.0.Alpha3"
 ldapbp.url="http://download.java.net/javaee5/external/shared/ldapbp-src/jars/ldapbp-src-1_1_01.jar"
 solrealm.svn.url="https://glassfish-svn.dev.java.net/svn/glassfish-svn/trunk/external/modules/solarisrealm/1.0"
 slf4j.version="1.5.10"
