--- a/api/ha-api/pom.xml
+++ b/api/ha-api/pom.xml
@@ -45,7 +45,7 @@
     <name>GlassFish High Availability APIs and SPI</name>
 
     <scm>
-        <connection>scm:svn:https://svn.dev.java.net/svn/glassfish-svn/trunk/api/ha-api</connection>
+        <connection>scm:svn:svn+ssh://janey@svn.java.net/glassfish~svn/trunk/api/ha-api</connection>
     </scm>
 
     <developers>
@@ -189,7 +189,7 @@
         <repository>       <!-- internal repository to publish to -->
             <uniqueVersion>false</uniqueVersion>
             <id>rator.sfbay</id>
-            <url>dav:http://glassfish-maven-repository.sfbay.sun.com/maven/repositories/glassfish/</url>
+            <url>dav:http://glassfish-maven-repository.us.oracle.com/maven/repositories/glassfish/</url>
         </repository>
     </distributionManagement>
 
