--- a/api/ha-api/pom.xml
+++ b/api/ha-api/pom.xml
@@ -40,12 +40,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.glassfish.ha</groupId>
     <artifactId>ha-api</artifactId>
-    <version>3.1.7-SNAPSHOT</version>
+    <version>3.1.7</version>
     <packaging>hk2-jar</packaging>
     <name>GlassFish High Availability APIs and SPI</name>
 
     <scm>
-        <connection>scm:svn:svn+ssh://janey@svn.java.net/glassfish~svn/trunk/api/ha-api</connection>
+        <connection>scm:svn:svn+ssh://janey@svn.java.net/glassfish~svn/tags/ha-api-3.1.7</connection>
     </scm>
 
     <developers>
