--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -36,7 +36,7 @@ javassist.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules
 javassist.version="3.14.0.GA"
 googlecollections.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/google-collections/1.0"
 googlecollections.version="1.0"
-guava-libraries.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/external/modules/guava-libraries/release06"
+guava-libraries.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/guava-libraries/release06/"
 guava-libraries.version="release06"
 log4j.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/log4j/1.2.14/v1_2_14_maven"
 xml-apis.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/xml-apis/1.0.b2"
@@ -45,12 +45,12 @@ jboss-interceptor-api.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/exte
 jboss-interceptor-api.version="1.1"
 weld-api.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/weld/api/1.1.Beta2"
 weld-api.version="1.1.Beta2"
-weld-spi.version="1.1.0.Beta2"
+weld-spi.version="1.1.0.RC2"
 cdi-api.version="1.0-SP3"
-weld-core.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/weld/core/1.1.0.Beta2"
+weld-core.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/weld/core/1.1.0.CR2/"
 javax-inject.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/javax-inject/1"
 javax-inject.version="1"
-jboss-interceptor.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jboss-interceptors/2.0.0.Alpha3"
+jboss-interceptor.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jboss-interceptors/2.0.0.CR1/"
 jboss-interceptor.version="2.0.0.Alpha3"
 ldapbp.url="http://download.java.net/javaee5/external/shared/ldapbp-src/jars/ldapbp-src-1_1_01.jar"
 solrealm.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/solarisrealm/1.0"
