add script to compile package-rename-task.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@44160 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -29,6 +29,7 @@ jsp-pom.svn.url="https://svn.java.net/svn/jsp~svn/tags/jsp-pom-2.2.1.b02"
 jtype.version=0.1.0
 jtype.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jtype/${jtype.version}"
 uel.svn.url="https://svn.java.net/svn/uel~svn/tags/2.2"
+package-rename-task.svn.url=https://svn.java.net/svn/package-rename-task~svn/trunk/package-rename-task 
 jstl.svn.url="https://svn.java.net/svn/jstl~svn/tags/1.2.1"
 grizzly.svn.url="https://svn.java.net/svn/grizzly~svn/tags/1_9_24"
 scripting.svn.url="https://svn.java.net/svn/glassfish-scripting~svn/tags/rails-1.0-b09"
