update jaxb SCM to Kenai repository
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@44162 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -200,6 +200,7 @@ fi.cvs.tag=jaxb-2_2-integration-20091026
 fi.version=1.2.4
 fi.mvn.path=com/sun/xml/fastinfoset/FastInfoset/${fi.version}/FastInfoset-${fi.version}.jar
 
+jaxb.svn.url=https://svn.java.net/svn/jaxb~version2/branches/jaxb-2_2-branch/jaxb-ri
 jaxb.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
 jaxb.cvs.tag=jaxb-2_2-branch
 jaxb.version=2.2
