--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -397,7 +397,7 @@ solrealm.version=1.0
 # WSIT Properties ------END------
 
 #JAX-RS
-jsr311-api.svn.url=https://svn.java.net/svn/jsr311~svn/tags/jsr311/tags/jsr311-api-1.1.1
+jsr311-api.svn.url=https://svn.java.net/svn/jsr311~svn/tags/jsr311-api-1.1.1
 jsr311-api.version=1.1.1
 
 # jersey deps
@@ -432,7 +432,7 @@ mq.src.zip=mq-distribution-4.4.1-007-sources.zip
 mq.src.zip.url=http://download.java.net/maven/2/org/glassfish/mq-distribution//4.4.1-007/${mq.src.zip}
 mq.src.dep.jar1=javaee-api-6.0-SNAPSHOT.jar
 mq.src.dep.url1=http://download.java.net/maven/2/javax/javaee-api/6.0-SNAPSHOT/${mq.src.dep.jar1}
-mq.src.dep.jar2=grizzly-nio-framework-1.9.18b.jar
+mq.src.dep.jar2=grizzly-nio-framework-1.9.24.jar
 mq.src.dep.jar3=jhall-2.0.jar
 mq.src.dep.url3=http://download.java.net/maven/2/com/sun/woodstock/dependlibs/jhall/2.0/${mq.src.dep.jar3}
 mq.zip.artifact=mq4_4.zip
