-update policy scm repository on Kenai
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@44186 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -297,9 +297,10 @@ wsit.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
 wsit.cvs.tag=METRO-2_0-BRANCH
 wsit.version=2.0
 
+policy.svn.url=https://svn.java.net/svn/policy~policy/tags/metro2_0-release/policy
 policy.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
 policy.cvs.tag=METRO-2_0-BRANCH
-policy.version=2.0-b02
+policy.version=2.0-b01
 policy.mvn.path=com/sun/xml/ws/policy/${policy.version}/policy-${policy.version}.jar
 
 xwss.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
