Source build related changes for Weld 1.1.0.Final integration. [svn commit id 44592]
Tested manually that the Weld side of the source build went through
with these changes.



git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@44593 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -44,11 +44,11 @@ xml-apis.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/
 dom4j.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/dom4j/1.6.1"
 jboss-interceptor-api.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jboss-interceptors-api/1.1"
 jboss-interceptor-api.version="1.1"
-weld-api.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/weld/api/1.1.Beta2"
-weld-api.version="1.1.Beta2"
-weld-spi.version="1.1.0.RC2"
+weld-api.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/weld/api/1.1.Final"
+weld-api.version="1.1.Final"
+weld-spi.version="1.1.0.Final"
 cdi-api.version="1.0-SP3"
-weld-core.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/weld/core/1.1.0.CR4/"
+weld-core.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/weld/core/1.1.0.Final/"
 javax-inject.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/javax-inject/1"
 javax-inject.version="1"
 jboss-interceptor.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jboss-interceptors/2.0.0.CR1/"
