--- a/external/modules/org.osgi.compendium/4.2.0/pom.xml
+++ b/external/modules/org.osgi.compendium/4.2.0/pom.xml
@@ -4,6 +4,7 @@
     <url>http://www.osgi.org/</url>
   </organization>
   <modelVersion>4.0.0</modelVersion>
+  <packaging>bundle</packaging>
   <name>OSGi R4.2 Compendium Bundle</name>
   <description>OSGi Service Platform Release 4.2 Compendium Interfaces and Classes.</description>
   <groupId>org.osgi</groupId>
@@ -29,11 +30,18 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.3.4</version>
+        <extensions>true</extensions>
         <configuration>
-          <excludes>
-            <exclude>some-file-that-does-not-exist</exclude>
-          </excludes>
+          <instructions>
+            <Bundle-SymbolicName>org.osgi.compendium</Bundle-SymbolicName>
+            <Bundle-Name>OSGi compendium API</Bundle-Name>
+            <Bundle-Vendor>OSGi Alliance</Bundle-Vendor>
+            <Export-Package>org.osgi.*,info.*</Export-Package>
+            <Import-Package>!*</Import-Package>
+          </instructions>
         </configuration>
       </plugin>
     </plugins>
