--- a/external/modules/org.osgi.core/4.0.0/pom.xml
+++ b/external/modules/org.osgi.core/4.0.0/pom.xml
@@ -4,6 +4,7 @@
     <url>http://www.osgi.org/</url>
   </organization>
   <modelVersion>4.0.0</modelVersion>
+  <packaging>bundle</packaging>
   <name>OSGi R4 Core Bundle</name>
   <description>OSGi Service Platform Release 4 Core Interfaces and Classes.</description>
   <groupId>org.osgi</groupId>
@@ -12,11 +13,18 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-jar-plugin</artifactId>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.3.4</version>
+        <extensions>true</extensions>
         <configuration>
-          <excludes>
-            <exclude>some-file-that-does-not-exist</exclude>
-          </excludes>
+          <instructions>
+            <Bundle-SymbolicName>org.osgi.core</Bundle-SymbolicName>
+            <Bundle-Name>OSGi core API</Bundle-Name>
+            <Bundle-Vendor>OSGi Alliance</Bundle-Vendor>
+            <Export-Package>org.osgi.*</Export-Package>
+            <Import-Package>!*</Import-Package>
+          </instructions>
         </configuration>
       </plugin>
     </plugins>
