add maven.repo.remote to project.properties since Maven 1 repository has changed. See:  http://blogs.atlassian.com/developer/2006/12/maven_1_repository_changes.html
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45370 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/modules/BCEL_5_2/BCEL_5_2/project.properties
+++ b/external/modules/BCEL_5_2/BCEL_5_2/project.properties
@@ -1,3 +1,4 @@
+maven.repo.remote=http://repository.atlassian.com,http://mirrors.ibiblio.org/pub/mirrors/maven 
 maven.repo.list=apache.snapshots
 
 maven.repo.apache.snapshots=scp://cvs.apache.org
