update source build for bean-validator, management-api, gmbal, mq, woodstock
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45378 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -16,10 +16,10 @@ jakarta-regexp-1.4.svn.url="http://svn.apache.org/repos/asf/jakarta/regexp/tags/
 bcel.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/BCEL_5_2/BCEL_5_2/"
 bcel.version="5.2"
 gf.ext.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules"
-hk2.svn.url="https://svn.java.net/svn/hk2~svn/tags/hk2-parent-1.0.66"
+hk2.svn.url="https://svn.java.net/svn/hk2~svn/tags/hk2-parent-1.1.0"
 validation-api.version=1.0.0.GA
 validation-api.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/bean-validator/validation-api/${validation-api.version}"
-hibernate-validator.version=4.0.2.GA
+hibernate-validator.version=4.1.0.Final
 hibernate-validator.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/bean-validator/hibernate-validator/${hibernate-validator.version}"
 hibernate-jpa-api.version=2.0.Beta-20090815
 hibernate-jpa-api.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/bean-validator/jpa-api"
@@ -27,12 +27,12 @@ jsp-impl.svn.url="https://svn.java.net/svn/jsp~svn/tags/jsp-impl-2.2.2-b06"
 jsp-api.svn.url="https://svn.java.net/svn/jsp~svn/tags/jsp-api-2.2.1-b03"
 jsp-pom.svn.url="https://svn.java.net/svn/jsp~svn/tags/jsp-pom-2.2.1-b02"
 
-jtype.version=0.1.0
+jtype.version=0.1.1
 jtype.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jtype/${jtype.version}"
 uel.svn.url="https://svn.java.net/svn/uel~svn/tags/2.2"
 package-rename-task.svn.url=https://svn.java.net/svn/package-rename-task~svn/trunk/package-rename-task 
 jstl.svn.url="https://svn.java.net/svn/jstl~svn/tags/1.2.1"
-grizzly.svn.url="https://svn.java.net/svn/grizzly~svn/tags/1_9_24"
+grizzly.svn.url="https://svn.java.net/svn/grizzly~svn/tags/1_9_31"
 scripting.svn.url="https://svn.java.net/svn/glassfish-scripting~svn/tags/rails-1.0-b09"
 javassist.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/javassist/3.14.0.GA"
 javassist.version="3.14.0.GA"
@@ -62,6 +62,7 @@ slf4j-jdk14.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modul
 slf4j-ext.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/slf4j-all/slf4j-ext/1.5.10"
 slf4j-all-bv.version=1.5.6
 slf4j-all-bv.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/slf4j-all"
+slf4j.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/bean-validator/slf4j/${slf4j-all-bv.version}"
 cal10n-api.version="0.7.2"
 cal10n-api.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/cal10n-api/0.7.2"
 
@@ -325,7 +326,8 @@ bnd.mvn.path=biz/aQute/${bnd.artifactid}/${bnd.version}/bnd-${bnd.version}.jar
 
 # Dependencies on other projects
 gmbal.dir=gmbal
-gmbal.version=3.0.0-b024
+        <gmbal.version>3.1.0-b001</gmbal.version>
+gmbal.version=3.1.0-b001
 gmbal.groupid=org.glassfish.gmbal
 gmbal.artifactid=gmbal
 gmbal.hg.url=https://hg.kenai.com/hg/gmbal~master
@@ -333,7 +335,7 @@ gmbal.mvn.path=org/glassfish/gmbal/${gmbal.artifactid}/${gmbal.version}/${gmbal.
 gmbal-api.mvn.path=org/glassfish/gmbal/gmbal-api-only/${gmbal.version}/gmbal-api-only-${gmbal.version}.jar
 
 management-api.dir=management-api
-management-api.version=3.0.0-b013
+management-api.version=3.1.0-b001
 management-api.groupid=org.glassfish.external
 management-api.artifactid=management-api
 management-api.hg.url=https://hg.kenai.com/hg/gmbal~gf_common
@@ -423,10 +425,10 @@ btrace.version=1.0.5
 
 # mq
 mq.version=4.4.1-007
-mq.src.zip=mq-distribution-4.4.1-007-sources.zip
-mq.src.zip.url=http://download.java.net/maven/2/org/glassfish/mq-distribution//4.4.1-007/${mq.src.zip}
-mq.src.dep.jar1=javaee-api-6.0-SNAPSHOT.jar
-mq.src.dep.url1=http://download.java.net/maven/2/javax/javaee-api/6.0-SNAPSHOT/${mq.src.dep.jar1}
+mq.src.zip=mq-distribution-4.5-029-sources.zip    
+mq.src.zip.url=http://download.java.net/maven/2/org/glassfish/mq-distribution//4.5-0.29/${mq.src.zip}
+mq.src.dep.jar1=javaee-api-6.0.jar
+mq.src.dep.url1=http://download.java.net/maven/2/javax/javaee-api/6.0/${mq.src.dep.jar1}
 mq.src.dep.jar2=grizzly-nio-framework-1.9.24.jar
 mq.src.dep.jar3=jhall-2.0.jar
 mq.src.dep.url3=http://download.java.net/maven/2/com/sun/woodstock/dependlibs/jhall/2.0/${mq.src.dep.jar3}
@@ -452,7 +454,7 @@ pkg-client.svn.url=https://svn.java.net/svn/updatecenter2~svn/branches/2.3sustai
 pkg-client.svn.revision=2492
 
 # woodstock
-woodstock.svn.url=https://svn.java.net/svn/woodstock~svn/tags/Woodstock_402_B3
+woodstock.svn.url=https://svn.java.net/svn/woodstock~svn/tags/Woodstock_402_B6
 
 #jsftemplating
 jsftemplating.svn.url=https://svn.java.net/svn/jsftemplating~svn/tags/JSFTEMPLATING_1_2_11
