updating jaxb source build to GF3.1 - jaxb 2.2.3-1
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45381 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -94,116 +94,8 @@ eclipselink.release.version=2.1.0
 eclipselink.version.qualifier=M5
 eclipselink.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/eclipselink/${eclipselink.release.version}-${eclipselink.version.qualifier}
 
-# JAXB Properties ------START------
-
-#imported from cvs at :pserver:snajper@cvs.dev.java.net:/cvs export -r jaxb-22-integration dtd-parser/dtd-parser
-dtd-parser.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/dtd-parser
-dtd-parser.version=1.0
-dtd-parser.mvn.path=sun/dtd-parser/${dtd-parser.version}/dtd-parser-${dtd-parser.version}.jar
-
-#imported from cvs -d:pserver:anonymous@relaxng.cvs.sourceforge.net:/cvsroot/relaxng export -r version-1_0 datatype
-relaxng-datatype.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/relaxng-datatype
-relaxng-datatype.version=1.0
-relaxng-datatype.mvn.path=com/sun/xml/relaxngDatatype/${relaxng-datatype.version}/relaxngDatatype-${relaxng-datatype.version}.jar
-
-#imported from cvs -d:pserver:anonymous@relaxngcc.cvs.sourceforge.net:/cvsroot/relaxngcc export -D 20021212 relaxngcc
-relaxngcc.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/relaxngcc
-relaxngcc.version=20021212
-relaxngcc.mvn.path=com/sun/xml/relaxngcc/${relaxngcc.version}/relaxngcc-${relaxngcc.version}.jar
-
-#imported from svn co -r '{20050516}' https://msv.dev.java.net/svn/msv/trunk msv-20050516 + DateType.java from trunk, as the repository was corrupt and the file is missing from tag
-xsdlib.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/xsdlib
-xsdlib.version=20050516
-xsdlib.mvn.path=com/sun/msv/datatype/xsd/xsdlib/${xsdlib.version}/xsdlib-${xsdlib.version}.jar
-
-#imported from cvs -d :pserver:anonymous@iso-relax.cvs.sourceforge.net:/cvsroot/iso-relax co -D 20090621 -d isorelax iso-relax
-isorelax.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/isorelax
-isorelax.version=20090621
-isorelax.mvn.path=isorelax/isorelax/${isorelax.version}/isorelax-${isorelax.version}.jar
-
-#imported from closed source jsr222 mirror (not including link here because it contains internal server names)
-jaxb-api.version=2.2
-jaxb-api.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jaxb-api/${jaxb-api.version}
-jaxb-api.mvn.path=javax/xml/bind/jaxb-api/${jaxb-api.version}/jaxb-api-${jaxb-api.version}.jar
-jaxb-api-osgi.mvn.path=javax/xml/bind/jaxb-api-osgi/${jaxb-api.version}/jaxb-api-osgi-${jaxb-api.version}.jar
-
-#imported from cvs -z3 -d:pserver:anonymous@args4j.cvs.sourceforge.net:/cvsroot/args4j export -r release-1_0 -d args4j-release-1_0 args4j
-args4j.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/args4j
-args4j.version=1.0
-args4j.mvn.path=args4j/args4j/${args4j.version}/args4j-${args4j.version}.jar
-
-#imported from cvs -d :pserver:guest@cvs.dev.java.net:/cvs export -D20050510 -d rngom-20050510 rngom
-rngom.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/rngom
-rngom.version=20050510
-rngom.mvn.path=org/kohsuke/rngom/rngom/${rngom.version}/rngom-${rngom.version}.jar
-
-#imported from svn co -r '{20050516}' https://msv.dev.java.net/svn/msv/trunk msv-20050516
-msv.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/msv
-msv.version=20050516
-msv.mvn.path=com/sun/msv/msv/${msv.version}/msv-${msv.version}.jar
-
-javacc.svn.url=https://svn.java.net/svn/javacc~svn/tags/release_32
-javacc.version=3.2
-javacc.mvn.path=javacc/javacc/${javacc.version}/javacc-${javacc.version}.jar
-
-#imported from svn co http://svn.apache.org/repos/asf/xml/commons/tags/xml-commons-resolver-1_1/
-resolver.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/resolver
-resolver.version=1.1
-resolver.mvn.path=xml-resolver/xml-resolver/${resolver.version}/xml-resolver-${resolver.version}.jar
-
-#imported from resolver source zip bundled with jaxb 2.2
-resolver-comsun.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/resolver-comsun
-resolver-comsun.version=1.1
-resolver-comsun.mvn.path=xml-resolver/xml-resolver-comsun/${resolver-comsun.version}/xml-resolver-comsun-${resolver-comsun.version}.jar
-
-#imported from jsr173api source zip bundled with jaxb 2.2
-jsr173api.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jsr173api
-jsr173api.version=1.0
-jsr173api.mvn.path=javax/xml/jsr173/${jsr173api.version}/jsr173-${jsr173api.version}.jar
-
-#imported from activation source zip bundled with jaxb 2.2
-activation.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/activation
-activation.version=1.1
-activation.mvn.path=javax/activation/activation/${activation.version}/activation-${activation.version}.jar
-
-#imported from cvs -d :pserver:guest@cvs.dev.java.net:/cvs checkout -D 20060204 -d stax-ex-20060204 stax-ex
-stax-ex.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/stax-ex
-stax-ex.version=1.2-SNAPSHOT
-stax-ex.mvn.path=org/jvnet/staxex/stax-ex/${stax-ex.version}/stax-ex-${stax-ex.version}.jar
-
-codemodel.svn.url=https://svn.java.net/svn/codemodel~svn/trunk/codemodel
-codemodel.svn.date=20080228
-codemodel.version=2.1-SNAPSHOT
-codemodel.mvn.path=com/sun/codemodel/codemodel/${codemodel.version}/codemodel-${codemodel.version}.jar
-
-fi1.svn.url=https://svn.java.net/svn/fi~svn/tags/FAST_INFOSET_JWSDP_1_6_10/FastInfoset
-fi1.version=1.0
-fi1.mvn.path=com/sun/xml/fastinfoset/FastInfoset/${fi1.version}/FastInfoset-${fi1.version}.jar
-
-# following need tag
-txw2.svn.url=https://svn.java.net/svn/jaxb~version2/tags/jaxb-22-integration/txw2
-txw2.version=20091026
-txw2.mvn.path=com/sun/xml/txw2/txw2/${txw2.version}/txw2-${txw2.version}.jar
-txwc2.mvn.path=com/sun/xml/txw2/txwc2/${txw2.version}/txwc2-${txw2.version}.jar
-
-istack-commons.svn.url=https://svn.java.net/svn/istack-commons~svn/trunk/istack-commons
-istack-commons.version=1.2
-istack-commons.tools.mvn.path=com/sun/istack/istack-commons-tools/istack-commons-tools/${istack-commons.version}/istack-commons-tools-${istack-commons.version}.jar
-istack-commons.runtime.mvn.path=com/sun/istack/istack-commons-runtime/istack-commons-runtime/${istack-commons.version}/istack-commons-runtime-${istack-commons.version}.jar
-
-xsom.svn.url=https://svn.java.net/svn/jaxb~version2/tags/jaxb-2_2-integration-26102009/xsom
-xsom.version=20050510
-xsom.mvn.path=com/sun/xsom/xsom/${xsom.version}/xsom-${xsom.version}.jar
-
-fi.svn.url=https://svn.java.net/svn/fi~svn/tags/jaxb-2_2-integration-20091026/FastInfoset
-fi.version=1.2.4
-fi.mvn.path=com/sun/xml/fastinfoset/FastInfoset/${fi.version}/FastInfoset-${fi.version}.jar
-
-jaxb.svn.url=https://svn.java.net/svn/jaxb~version2/branches/jaxb-2_2-branch/jaxb-ri
-jaxb.version=2.2
-jaxb-osgi.mvn.path=com/sun/xml/bind/jaxb-osgi/${jaxb.version}/jaxb-osgi-${jaxb.version}.jar
-
-# JAXB Properties ------END------
+jaxb.svn.url=https://svn.java.net/svn/jaxb~version2/tags/jaxb-2_2_3u1/
+jaxb.version=2.2.3-1
 
 # WSIT Properties ------START------
 xerces.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/xerces/${xerces.version}
