--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -29,7 +29,9 @@ jsp-pom.svn.url="https://svn.java.net/svn/jsp~svn/tags/jsp-pom-2.2.1-b02"
 
 jtype.version=0.1.1
 jtype.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jtype/${jtype.version}"
-uel.svn.url="https://svn.java.net/svn/uel~svn/tags/2.2"
+uel-pom.svn.url="https://svn.java.net/svn/uel~svn/tags/uel-pom-2.2.1-b03"
+uel-api.svn.url="https://svn.java.net/svn/uel~svn/tags/uel-api-2.2.1-b03"
+uel-impl.svn.url="https://svn.java.net/svn/uel~svn/tags/uel-impl-2.2.1-b03"
 package-rename-task.svn.url=https://svn.java.net/svn/package-rename-task~svn/trunk/package-rename-task 
 jstl.svn.url="https://svn.java.net/svn/jstl~svn/tags/1.2.1"
 grizzly.svn.url="https://svn.java.net/svn/grizzly~svn/tags/1_9_31"
