add back  fi1.svn.url which is reference in wsit.xml.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45395 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -285,6 +285,11 @@ ldapbp.src.artifact=ldapbp-src-1_1_01.jar
 ldapbp.artifact=ldapbp.jar
 solrealm.version=1.0
 
+fi1.svn.url=https://svn.java.net/svn/fi~svn/tags/FAST_INFOSET_JWSDP_1_6_10/FastInfoset
+fi1.version=1.6.1
+fi1.mvn.path=com/sun/xml/fastinfoset/FastInfoset/${fi1.version}/FastInfoset-${fi1.version}.jar
+
+
 # WSIT Properties ------END------
 
 #JAX-RS
