--- a/external/modules/org.osgi.enterprise/4.2.0/pom.xml
+++ b/external/modules/org.osgi.enterprise/4.2.0/pom.xml
@@ -8,7 +8,7 @@
   <name>OSGi R4.2 Enterprise Bundle</name>
   <description>OSGi Service Platform Release 4.2 Enterprise Interfaces and Classes.</description>
   <groupId>org.osgi</groupId>
-  <artifactId>org.osgi.compendium</artifactId>
+  <artifactId>org.osgi.enterprise</artifactId>
   <version>4.2.0</version>
   <dependencies>
     <dependency>
