Integrate source build for EclipseLink 2.2.0
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45428 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -92,9 +92,10 @@ dbschema.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/
 antlr.svn.url="https://svn.java.net/svn/glassfish~svn/trunk/external/modules/antlr/2.7.6"
 
 #Eclipselink properties
-eclipselink.release.version=2.1.0
-eclipselink.version.qualifier=M5
-eclipselink.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/eclipselink/${eclipselink.release.version}-${eclipselink.version.qualifier}
+eclipselink.release.version=2.2.0
+eclipselink.version.qualifier=
+#eclipselink.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/eclipselink/${eclipselink.release.version}-${eclipselink.version.qualifier}
+eclipselink.svn.url= https://svn.java.net/svn/glassfish~svn/trunk/external/modules/eclipselink/${eclipselink.release.version}
 
 jaxb.svn.url=https://svn.java.net/svn/jaxb~version2/tags/jaxb-2_2_3u1/
 jaxb.version=2.2.3-1
@@ -132,7 +133,7 @@ mimepull.mvn.path=org/jvnet/mimepull/${mimepull.version}/mimepull-${mimepull.ver
 mail.hg.url=https://kenai.com/hg/javamail~mercurial
 mail.hg.tag=JAVAMAIL-1_4_4
 mail.version=1.4.4
-mail.mvn.path=javax/mail/mail/${mail.version}/mail-${mail.version}.jar
+mail.mvn.path=com/sun/mail/javax.mail/${mail.version}/javax.mail-${mail.version}.jar
 
 jaxr-api.svn.url=https://svn.java.net/svn/glassfish~v2/tags/metro-integration-jdk15-20091217/jaxr-api
 jaxr-api.version=1.0_04
@@ -245,9 +246,9 @@ felix.version=1.2.0
 felix.groupid=org.apache.felix
 felix.artifactid=org.osgi.core
 felix.mvn.path=org/apache/felix/org.osgi.core/${felix.version}/org.osgi.core-${felix.version}.jar
-org.osgi.compendium.version=1.2.0
+org.osgi.compendium.version=4.2.0
 #osgi-cmpn.mvn.path=org/apache/felix/org.osgi.compendium/${felix.version}/org.osgi.compendium-${felix.version}.jar
-osgi-cmpn.mvn.path=org/apache/felix/org.osgi.compendium/${org.osgi.compendium.version}/org.osgi.compendium-${org.osgi.compendium.version}.jar
+osgi-cmpn.mvn.path=org/osgi/org.osgi.compendium/${org.osgi.compendium.version}/org.osgi.compendium-${org.osgi.compendium.version}.jar
 
 servlet.svn.url="https://svn.java.net/svn/glassfish~v2/branches/SGES211_FCS_BRANCH/servlet-api/src/jakarta-servletapi-5/jsr154"
 servlet-api.version=2.5
