--- a/external/source-build/build.xml
+++ b/external/source-build/build.xml
@@ -192,11 +192,12 @@ script.xml requires native build
 	     for example see eclipselink/build.properties#eclipselink.core.depend
         -->
 	<property name = "javax.jms.jar.name" value = "javax.jms_1.1.0.jar"/>
-	<property name = "javax.mail.jar.name" value = "javax.mail_1.4.0.v200804091730.jar"/>
+	<property name = "javax.mail.jar.name" value = "javax.mail_1.4.0.v201005080615.jar"/>
 	<property name = "javax.resource.jar.name" value = "javax.resource_1.5.0.jar"/>
-	<property name = "javax.transaction.jar.name" value = "javax.transaction_1.1.0.jar"/>
+	<property name = "javax.transaction.jar.name" value = "javax.transaction_1.1.0.v201002051055.jar"/>
 	<property name = "osgi.cmpn.jar.name" value = "osgi.cmpn_4.1.0.jar"/>
 	<property name = "osgi.core.jar.name" value = "osgi.core.zip"/>
+
 	<copy file="${maven.repo.local}/${jms-api.mvn.path}" tofile="${plugins.dir}/${javax.jms.jar.name}" />
 	<copy file="${maven.repo.local}/${mail.mvn.path}" 		   tofile="${plugins.dir}/${javax.mail.jar.name}" />
 	<copy file="${maven.repo.local}/${connector-api.mvn.path}" tofile="${plugins.dir}/${javax.resource.jar.name}" />
@@ -211,7 +212,7 @@ script.xml requires native build
 	-->
 	<property name="maven.ant.tasks.jar.fullpath" location="${maven.ant.tasks.jar}"/>
 	<exec executable="ant" failonerror="true" newenvironment="false" >
-            <!--<arg line="-verbose" /> -->
+            <!-- <arg line="-verbose" /> -->
             <arg line="-f eclipselink.xml" />
             <!-- parameters required to drive eclipselink build -->     
             <arg line="-Dbasedir=${eclipselink.dir}" />
@@ -220,8 +221,9 @@ script.xml requires native build
             <arg line="-Dbnd.path=${maven.repo.local}/${bnd.mvn.path}" />
             <arg line="-Declipselink.release.version=${eclipselink.release.version}" />
             <arg line="-Declipselink.version.qualifier=${eclipselink.version.qualifier}" />
+			<arg line="-Dnobnd=true" /> <!-- temp workaround for eclipselink scripts not using bnd.path as required -->
             <arg line="build-and-upload-to-maven" />
-            <!-- <arg line="build" /> -->
+            <!-- <arg line=" build" />  -->
         </exec>
     </target>
 
