--- a/v3/findbugs/pom.xml
+++ b/v3/findbugs/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="iso-8859-1"?>
 <!--
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
@@ -41,33 +41,26 @@
 
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+			    http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <groupId>org.glassfish</groupId>
-        <artifactId>javaee-api</artifactId>
-        <version>3.2-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+	<groupId>org.glassfish</groupId>
+	<artifactId>glassfish-parent</artifactId>
+	<version>3.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>javax.annotation</artifactId>
+    <groupId>org.glassfish</groupId>
+    <artifactId>findbugs</artifactId>
     <packaging>jar</packaging>
-    <properties>
-        <extension.name>javax.annotation</extension.name>
-        <spec.version>1.1</spec.version>
-        <findbugs.skip>false</findbugs.skip>
-    </properties>
-    <name>${extension.name} API v.${spec.version}</name>
-    <description>Common Annotations for the JavaTM Platform API version ${spec.version} Repackaged as OSGi bundle in GlassFish</description>
+    <name>GlassFish FindBugs resources</name>
+
     <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-        </plugins>
+	<resources>
+	    <resource>
+		<directory>src/main/resources</directory>
+	    </resource>
+	</resources>
     </build>
 </project>
