--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -299,9 +299,10 @@ jsr311-api.version=1.1.1
 
 # jersey deps
 
-jackson.version=1.1.1
+jackson.version=1.5.5
+jackson.major.version=1.5
 #jackson.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jackson/${jackson.version}
-jackson.svn.url=http://svn.codehaus.org/jackson/tags/${jackson.version}
+jackson.svn.url=http://svn.codehaus.org/jackson/tags/${jackson.major.version}/${jackson.version}
 jackson.mvn.path=org/codehaus/jackson/jackson-asl/${jackson.version}/jackson-asl-${jackson.version}.jar
 
 jettison.version=1.1
@@ -309,8 +310,8 @@ jettison.version=1.1
 jettison.svn.url=http://svn.codehaus.org/jettison/tags/jettison-${jettison.version}
 jettison.mvn.path=org/codehaus/jettison/jettison/${jettison.version}/jettison-${jettison.version}.jar
 
-jersey.svn.url=https://svn.java.net/svn/jersey~svn/tags/jersey-1.5-ea07/jersey
-jersey.version=1.1.4.1
+jersey.svn.url=https://svn.java.net/svn/jersey~svn/tags/jersey-1.5/jersey
+jersey.version=1.5
 
 # opendmk
 opendmk.version=1.0-b01-ea
