--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -1,4 +1,3 @@
-
 cvsroot=":pserver:guest@cvs.dev.java.net:/cvs"
 JDK_1.4=/System/Library/Frameworks/JavaVM.framework/Versions/1.4/Home
 JDK_1.5=/System/Library/Frameworks/JavaVM.framework/Versions/1.5/Home
@@ -7,7 +6,7 @@ JDK_1.6=/System/Library/Frameworks/JavaVM.framework/Versions/1.6/Home
 #JDK_1.6=/opt/jdk1.6.0_13
 maven.ant.tasks.jar=lib/maven-ant-tasks-2.0.10.jar
 # to be overriden when called from GF - by the Maven GF setup
-project.version=3.1-SNAPSHOT
+project.version=3.1
 
 project.maven.repo="dav:http://glassfish-maven-repository.us.oracle.com/maven/repositories/glassfish"
 project.maven.repo.id="rator.sfbay"
@@ -101,39 +100,123 @@ jaxb.svn.url=https://svn.java.net/svn/jaxb~version2/tags/jaxb-2_2_3u1/
 jaxb.version=2.2.3-1
 
 # WSIT Properties ------START------
-xerces.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/xerces/${xerces.version}
-xerces.version=2.6.2
-xerces.mvn.path=org/apache/xerces/xercesImpl/${xerces.version}/xercesImpl-${xerces.version}.jar
+antdep.version=1.8.0
+antdep.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/ant/${antdep.version}
+antdep.mvn.path=org/apache/ant/ant/${antdep.version}/ant-${antdep.version}.jar
+ant-trax.mvn.path=org/apache/ant/ant-trax/${antdep.version}/ant-trax-${antdep.version}.jar
+ant-junit.mvn.path=org/apache/ant/ant-junit/${antdep.version}/ant-junit-${antdep.version}.jar
+ant-launcher.mvn.path=org/apache/ant/ant-launcher/${antdep.version}/ant-launcher-${antdep.version}.jar
+ant-nodeps.mvn.path=org/apache/ant/ant-nodeps/${antdep.version}/ant-nodeps-${antdep.version}.jar
 
-stax-utils.svn.url=https://svn.java.net/svn/stax-utils~svn/trunk
-stax-utils.version=20060415
-stax-utils.mvn.path=stax-utils/stax-utils/${stax-utils.version}/stax-utils-${stax-utils.version}.jar
+wsit.version=2.1
+wsit.svn.url=https://svn.java.net/svn/wsit~svn/tags/${wsit.version}
 
-jaxrpc-api.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/jaxrpc-api/${jaxrpc-api.version}
-jaxrpc-api.version=1.1
-jaxrpc-api.mvn.path=javax/xml/jaxrpc-api/${jaxrpc-api.version}/jaxrpc-api-${jaxrpc-api.version}.jar
+jaxws.svn.url=https://svn.java.net/svn/jax-ws~sources/tags/JAXWS_2_2_3_FCS_02022010_1/jaxws-ri
+jaxws-api.version=2.2.3
+jaxws-api.mvn.path=javax/xml/ws/jaxws-api/${jaxws-api.version}/jaxws-api-${jaxws-api.version}.jar
 
-jaxrpc.svn.url="https://svn.java.net/svn/jax-rpc~svn/tags/caps6-b2-04102008/jaxrpc-ri"
-jaxrpc.version=04102008
-jaxrpc-impl.mvn.path=com/sun/xml/rpc/jaxrpc-impl/${jaxrpc.version}/jaxrpc-impl-${jaxrpc.version}.jar
-jaxrpc-spi.mvn.path=com/sun/xml/rpc/jaxrpc-spi/${jaxrpc.version}/jaxrpc-spi-${jaxrpc.version}.jar
+fi.version=1.2.8
 
-#imported from woodstox source zip bundled with jaxws 2.2
+stax-api.version=1.0-2
+stax-api.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/stax-api/${stax-api.version}
+stax-api.mvn.url=javax/xml/stream/${stax-api.version}/stax-api-${stax-api.version}.jar
+
+stax-ex.version=1.2
+stax-ex.svn.url=https://svn.java.net/svn/stax-ex~svn/tags/stax-ex-1_2/stax-ex
+
+streambuffer.version=0.9
+streambuffer.mvn.path=com/sun/xml/stream/buffer/streambuffer/${streambuffer.version}/streambuffer-${streambuffer.version}.jar
+
+saaj-api.version=1.3.2
+saaj-api.mvn.path=javax/xml/soap/saaj-api/${saaj-api.version}/saaj-api-${saaj-api.version}.jar
+
+saaj-impl.version=1.3.8
+saaj-impl.mvn.path=com/sun/xml/messaging/saaj/saaj-impl/${saaj-impl.version}/saaj-impl-${saaj-impl.version}.jar
+
+mimepull.version=1.4
+mimepull.svn.url=https://svn.java.net/svn/mimepull~svn/tags/mimepull-1.4/
+mimepull.mvn.path=org/jvnet/mimepull/${mimepull.version}/mimepull-${mimepull.version}.jar
+
+http.version=1.0
+http.mvn.path=http/http/${http.version}/http-${http.version}.jar
+
+jsr181-api.version=1.0-MR1
+jsr181-api.mvn.path=javax/jws/jsr181-api/${jsr181-api.version}/jsr181-api-${jsr181-api.version}.jar
+
+jsr250-api.version=1.0
+jsr250-api.mvn.path=javax/jws/jsr250-api/${jsr250-api.version}/jsr250-api-${jsr250-api.version}.jar
+
+jaxws-asm.version=3.1
+jaxws-asm.mvn.path=asm/jaxws-asm/${jaxws-asm.version}/jaxws-asm-${jaxws-asm.version}.jar
+
+policy.version=2.2.2
+policy.mvn.path=com/sun/xml/ws/policy/${policy.version}/policy-${policy.version}.jar
+
+servlet-api.version=2.5
+servlet.svn.url="https://svn.java.net/svn/glassfish~v2/branches/SGES211_FCS_BRANCH/servlet-api/src/jakarta-servletapi-5/jsr154"
+servlet.mvn.path=javax/servlet/servlet-api/${servlet-api.version}/servlet-api-${servlet-api.version}.jar
+
+javax.servlet.version=3.1
+javax.servlet.mvn.path=org/glassfish/javax.servlet/${javax.servlet.version}/javax.servlet-${javax.servlet.version}.jar
+
 woodstox.version=3.2.1
 woodstox.mvn.path=org/codehaus/woodstox/wstx-asl/${woodstox.version}/wstx-asl-${woodstox.version}.jar
 
-wstrust-api.version=${wsit.version}
-wstrust-api.mvn.path=wstrust-api/wstrust-api/${wstrust-api.version}/wstrust-api-${wstrust-api.version}.jar
+hk2.version=1.1.0
+auto-depends.mvn.path=com/sun/enterprise/auto-depends/${hk2.version}/auto-depends-${hk2.version}.jar
 
-mimepull.svn.url=https://svn.java.net/svn/mimepull~svn/trunk
-mimepull.svn.rev=86
-mimepull.version=hudson-65
-mimepull.mvn.path=org/jvnet/mimepull/${mimepull.version}/mimepull-${mimepull.version}.jar
+istack-commons.version=2.3
+istack-commons.svn.url=https://svn.java.net/svn/istack-commons~svn/tags/istack-commons-${istack-commons.version}/
+istack-commons-runtime.mvn.path=com/sun/istack/istack-commons-runtime/${istack-commons.version}/istack-commons-runtime-${istack-commons.version}.jar
+istack-commons-tools.mvn.path=com/sun/istack/istack-commons-tools/${istack-commons.version}/istack-commons-tools-${istack-commons.version}.jar
+
+transaction-api.version=${project.version}
+transaction-api.mvn.path=org/glassfish/javax.transaction/${transaction-api.version}/javax.transaction-${transaction-api.version}.jar
+
+jaxrpc.svn.url="https://svn.java.net/svn/jax-rpc~svn/tags/caps6-b6-03112009/jaxrpc-ri"
+jaxrpc.version=1.1.3_01
+jaxrpc-impl.mvn.path=com/sun/xml/rpc/jaxrpc-impl/${jaxrpc.version}/jaxrpc-impl-${jaxrpc.version}.jar
+jaxrpc-spi.mvn.path=com/sun/xml/rpc/jaxrpc-spi/${jaxrpc.version}/jaxrpc-spi-${jaxrpc.version}.jar
+
+ejb.version=${project.version}
+ejb.mvn.path=org/glassfish/javax.ejb/${ejb.version}/javax.ejb-${ejb.version}.jar
+
+fi.version=1.2.8
+fi.svn.url=https://svn.java.net/svn/fi~svn/branches/FastInfoset-1_2-branch/FastInfoset@852
+fi.mvn.path=com/sun/xml/fastinfoset/FastInfoset/${fi.version}/FastInfoset-${fi.version}.jar
+
+fi1.svn.url=https://svn.java.net/svn/fi~svn/tags/FAST_INFOSET_JWSDP_1_6_10/FastInfoset
+fi1.version=1.6.1
+fi1.mvn.path=com/sun/xml/fastinfoset/FastInfoset/${fi1.version}/FastInfoset-${fi1.version}.jar
 
 mail.hg.url=https://kenai.com/hg/javamail~mercurial
 mail.hg.tag=JAVAMAIL-1_4_4
 mail.version=1.4.4
 mail.mvn.path=com/sun/mail/javax.mail/${mail.version}/javax.mail-${mail.version}.jar
+
+jaxrpc-api.version=3.1
+jaxrpc-api.mvn.path=org/glassfish/javax.xml.rpc/${jaxrpc-api.version}/javax.xml.rpc-${jaxrpc-api.version}.jar
+
+junit.version=3.8
+junit.mvn.path=junit/junit/${junit.version}/junit-${junit.version}.jar
+
+sjsxp.version=1.0.1
+sjsxp.mvn.path=com/sun/xml/stream/sjsxp/${sjsxp.version}/sjsxp-${sjsxp.version}.jar
+
+connector-api.version=${project.version}
+connector-api.mvn.path=org/glassfish/javax.resource/${connector-api.version}/javax.resource-${connector-api.version}.jar
+
+jmac-api.version=${project.version}
+jmac-api.mvn.path=org/glassfish/javax.security.auth.message/${jmac-api.version}/javax.security.auth.message-${jmac-api.version}.jar
+
+grizzly.version=1.9.31
+grizzly-http.mvn.path=com/sun/grizzly/grizzly-http/${grizzly.version}/grizzly-http-${grizzly.version}.jar
+
+commons-logging.version=1.0.4
+commons-logging.mvn.path=commons-logging/commons-logging/${commons-logging.version}/commons-logging-${commons-logging-version}.jar
+
+container-auth.version=${project.version}
+container-auth.mvn.path=org/glassfish/javax.security.auth.message/${container-auth.version}/javax.security.auth.message-${container-auth.version}.jar
 
 jaxr-api.svn.url=https://svn.java.net/svn/glassfish~v2/tags/metro-integration-jdk15-20091217/jaxr-api
 jaxr-api.version=1.0_04
@@ -142,75 +225,14 @@ jaxr-ri.svn.url=https://svn.java.net/svn/glassfish~svn/tags/jaxr-ri-1.0.8
 jaxr-ri.version=1.0.8
 jaxr-ri.mvn.path=com/sun/xml/registry/${jaxr-ri.version}/jaxr-impl-${jaxr-ri.version}.jar
 
-# START extracted from jaxws source zips
-jaxws-asm.version=3.1
-jaxws-asm.mvn.path=asm/jaxws-asm/${jaxws-asm.version}/jaxws-asm-${jaxws-asm.version}.jar
+# WSIT Properties ------END------
 
-saaj-api.version=1.3
-saaj-api.mvn.path=javax/xml/soap/saaj-api/${saaj-api.version}/saaj-api-${saaj-api.version}.jar
-
-http.version=1.0
-http.mvn.path=http/http/${http.version}/http-${http.version}.jar
-
-jaxws-api.version=2.2
-jaxws-api.mvn.path=javax/xml/jaxws-api/${jaxws-api.version}/jaxws-api-${jaxws-api.version}.jar
-
-# required by XWSS
-jaxws20.svn.url=https://svn.java.net/svn/jax-ws~sources/tags/JAXWS_20_JES5_111006/jaxws-ri
-
-jaxws20.cvs.tag=JAXWS_20_JES5_111006
-jaxws20-api.version=2.0
-jaxws20-api.mvn.path=javax/xml/jaxws-api/${jaxws20-api.version}/jaxws-api-${jaxws20-api.version}.jar
-
-jsr181-api.version=1.0-MR1
-jsr181-api.mvn.path=javax/jws/jsr181-api/${jsr181-api.version}/jsr181-api-${jsr181-api.version}.jar
-
-jsr250-api.version=1.0
-jsr250-api.mvn.path=javax/jws/jsr250-api/${jsr250-api.version}/jsr250-api-${jsr250-api.version}.jar
-# END extracted from jaxws source zips
-
-# need tag
-jaxws.svn.url=https://svn.java.net/svn/jax-ws~sources/branches/jaxws22/jaxws-ri
-
-#original source apache, we (Sean Mullan) maintain repackaged source, imported from closed source, tag J_1_4_2-20090710, xml-security-internal
-xmlsec.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/xmlsec
-xmlsec.version=J_1_4_2-20090710
-xmlsec.mvn.path=apache-xmlsec/xmlsec/${xmlsec.version}/xmlsec-${xmlsec.version}.jar
-
-streambuffer.svn.url=https://svn.java.net/svn/xmlstreambuffer~svn/tags/jaxws-2_2-integration-20091026
-streambuffer.version=0.9
-streambuffer.mvn.path=com/sun/xml/stream/buffer/streambuffer/${streambuffer.version}/streambuffer-${streambuffer.version}.jar
-
-# so far wsit uses trunk for 2.2 dev
-wsit.svn.url=https://svn.java.net/svn/wsit~svn/branches/METRO-2_0-BRANCH/wsit
-wsit.version=2.0
-
-policy.svn.url=https://svn.java.net/svn/policy~policy/tags/metro2_0-release/policy
-policy.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
-policy.cvs.tag=METRO-2_0-BRANCH
-policy.version=2.0-b01
-policy.mvn.path=com/sun/xml/ws/policy/${policy.version}/policy-${policy.version}.jar
-
-xwss.svn.url=https://svn.java.net/svn/xwss~svn/trunk/xwss-ri
-xwss.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
-xwss.cvs.tag=HEAD
-xwss.version=3.1
-
-saaj.svn.url=https://svn.java.net/svn/saaj~svn/tags/wsit-integration-20091026/saaj-ri
-saaj.cvs.url=:pserver:guest@cvs.dev.java.net:/cvs
-saaj.cvs.tag=wsit-integration-20091026
-saaj-impl.version=1.3.4
-saaj-impl.mvn.path=com/sun/xml/messaging/saaj/saaj-impl/${saaj-impl.version}/saaj-impl-${saaj-impl.version}.jar
-soapprocessor.mvn.path=com/sun/xml/messaging/saaj/soapprocessor/${saaj-impl.version}/soapprocessor-${saaj-impl.version}.jar
-
-#imported from ant.apache.org source bundle for ant 1.6.5
-antdep.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/ant/${antdep.version}
-antdep.version=1.6.5
-antdep.mvn.path=org/apache/ant/ant/${antdep.version}/ant-${antdep.version}.jar
-ant-trax.mvn.path=org/apache/ant/ant-trax/${antdep.version}/ant-trax-${antdep.version}.jar
-ant-junit.mvn.path=org/apache/ant/ant-junit/${antdep.version}/ant-junit-${antdep.version}.jar
-ant-launcher.mvn.path=org/apache/ant/ant-launcher/${antdep.version}/ant-launcher-${antdep.version}.jar
-ant-nodeps.mvn.path=org/apache/ant/ant-nodeps/${antdep.version}/ant-nodeps-${antdep.version}.jar
+# Security properties
+security.version=${project.version}
+security.mvn.path=org/glassfish/security/security/${security.version}/security-${security.version}.jar
+ldapbp.src.artifact=ldapbp-src-1_1_01.jar
+ldapbp.artifact=ldapbp.jar
+solrealm.version=1.0
 
 # Definitions for bnd, used in management-api, gmbal, and corba.
 bnd.repository=http://www.aqute.biz/repo
@@ -219,7 +241,6 @@ bnd.version=0.0.373
 bnd.artifactid=bnd
 bnd.mvn.path=biz/aQute/${bnd.artifactid}/${bnd.version}/bnd-${bnd.version}.jar
 
-# Dependencies on other projects
 gmbal.dir=gmbal
         <gmbal.version>3.1.0-b001</gmbal.version>
 gmbal.version=3.1.0-b001
@@ -234,13 +255,13 @@ management-api.version=3.1.0-b001
 management-api.groupid=org.glassfish.external
 management-api.artifactid=management-api
 management-api.hg.url=https://hg.kenai.com/hg/gmbal~gf_common
+management-api.mvn.path=org/glassfish/external/management-api/${management-api.version}/management-api-${management-api.version}.jar
 
 glassfish-corba.dir=glassfish-corba
 glassfish-corba.version=3.0.0-b041
 glassfish-corba.groupid=org.glassfish.orb
 glassfish-corba.artifactid=orb
 glassfish-corba.hg.url=https://hg.kenai.com/hg/gf-corba-v3-mirror~staging 
-
 
 felix.version=1.2.0
 felix.groupid=org.apache.felix
@@ -249,49 +270,6 @@ felix.mvn.path=org/apache/felix/org.osgi.core/${felix.version}/org.osgi.core-${f
 org.osgi.compendium.version=4.2.0
 #osgi-cmpn.mvn.path=org/apache/felix/org.osgi.compendium/${felix.version}/org.osgi.compendium-${felix.version}.jar
 osgi-cmpn.mvn.path=org/osgi/org.osgi.compendium/${org.osgi.compendium.version}/org.osgi.compendium-${org.osgi.compendium.version}.jar
-
-servlet.svn.url="https://svn.java.net/svn/glassfish~v2/branches/SGES211_FCS_BRANCH/servlet-api/src/jakarta-servletapi-5/jsr154"
-servlet-api.version=2.5
-servlet.mvn.path=javax/servlet/servlet-api/${servlet-api.version}/servlet-api-${servlet-api.version}.jar
-
-# required by xmlsec build just to build tests - cannot skip that
-junit.version=3.8
-junit.mvn.path=junit/junit/${junit.version}/junit-${junit.version}.jar
-
-ejb.version=${project.version}
-ejb.mvn.path=org/glassfish/javax.ejb/${ejb.version}/javax.ejb-${ejb.version}.jar
-
-transaction-internal-api.version=${project.version}
-transaction-internal-api.mvn.path=org/glassfish/transaction/transaction-internal-api/${transaction-internal-api.version}/transaction-internal-api-${transaction-internal-api.version}.jar
-
-transaction-api.version=${project.version}
-transaction-api.mvn.path=org/glassfish/javax.transaction/${transaction-api.version}/javax.transaction-${transaction-api.version}.jar
-
-sjsxp.version=1.0
-sjsxp.mvn.path=com/sun/xml/stream/sjsxp/${sjsxp.version}/sjsxp-${sjsxp.version}.jar
-
-container-auth.version=${project.version}
-container-auth.mvn.path=org/glassfish/javax.security.auth.message/${container-auth.version}/javax.security.auth.message-${container-auth.version}.jar
-
-connector-api.version=${project.version}
-connector-api.mvn.path=org/glassfish/javax.resource/${connector-api.version}/javax.resource-${connector-api.version}.jar
-
-jmac-api.version=${project.version}
-jmac-api.mvn.path=org/glassfish/javax.security.auth.message/${jmac-api.version}/javax.security.auth.message-${jmac-api.version}.jar
-
-# Security properties
-security.version=${project.version}
-security.mvn.path=org/glassfish/security/security/${security.version}/security-${security.version}.jar
-ldapbp.src.artifact=ldapbp-src-1_1_01.jar
-ldapbp.artifact=ldapbp.jar
-solrealm.version=1.0
-
-fi1.svn.url=https://svn.java.net/svn/fi~svn/tags/FAST_INFOSET_JWSDP_1_6_10/FastInfoset
-fi1.version=1.6.1
-fi1.mvn.path=com/sun/xml/fastinfoset/FastInfoset/${fi1.version}/FastInfoset-${fi1.version}.jar
-
-
-# WSIT Properties ------END------
 
 #JAX-RS
 jsr311-api.svn.url=https://svn.java.net/svn/jsr311~svn/tags/jsr311-api-1.1.1
