add shoal source build
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45656 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -337,3 +337,6 @@ woodstock.svn.url=https://svn.java.net/svn/woodstock~svn/tags/Woodstock_402_B6
 
 #jsftemplating
 jsftemplating.svn.url=https://svn.java.net/svn/jsftemplating~svn/tags/JSFTEMPLATING_1_2_11
+
+#shoal
+shoal.svn.url=https://svn.java.net/svn/shoal~svn/branches/SHOAL_1_1_ABSTRACTING_TRANSPORT
