--- a/external/source-build/build.xml
+++ b/external/source-build/build.xml
@@ -35,6 +35,7 @@
 	<ant antfile="mojarra.xml" target="build" />
 	<ant antfile="weld.xml" target="build" />
 	-->
+      	<ant antfile="shoal.xml" target="build" />
 	<ant antfile="jsr311-api.xml" target="build" /> 
         <ant antfile="mq.xml" target="build" /> 
         <ant antfile="javax-jms.xml" target="build" /> 
