Add trilead-ssh2.xml in the source build.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45674 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -340,3 +340,6 @@ jsftemplating.svn.url=https://svn.java.net/svn/jsftemplating~svn/tags/JSFTEMPLAT
 
 #shoal
 shoal.svn.url=https://svn.java.net/svn/shoal~svn/branches/SHOAL_1_1_ABSTRACTING_TRANSPORT
+
+#trilead-ssh2
+trilead-ssh2.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/trilead-ssh2/build212-hudson-6
