--- a/external/source-build/build.xml
+++ b/external/source-build/build.xml
@@ -16,7 +16,7 @@
     <target name="build.all" depends="init">
         <echo message="external directory: ${external.dir}"/>
         <echo message="maven.repo.local: ${maven.repo.local}"/>
-
+	<ant antfile="trilead-ssh2.xml" target="build" />
 	<ant antfile="commons-codec.xml" target="build" />
 	<ant antfile="felix-build.xml" target="build" />
         <ant antfile="servlet-2.5-build.xml" />
