add ha-api build script.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45681 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -343,3 +343,6 @@ shoal.svn.url=https://svn.java.net/svn/shoal~svn/branches/SHOAL_1_1_ABSTRACTING_
 
 #trilead-ssh2
 trilead-ssh2.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/trilead-ssh2/build212-hudson-6
+
+#ha-api
+ha-api.svn.url=https://svn.java.net/svn/glassfish~svn/tags/ha-api-3.1.8
