--- a/external/source-build/build.xml
+++ b/external/source-build/build.xml
@@ -29,6 +29,7 @@
 	<ant antfile="bcel.xml" target="build" />
 	<ant antfile="jakarta-regexp.xml" target="build" />
         <ant antfile="bean-validator.xml" target="build" />
+        <ant antfile="ha-api.xml" target="build" />
 	<ant antfile="hk2.xml" target="build" />
 	<ant antfile="grizzly.xml" target="build" />
 	<!--
