Add script to build schema2beans.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45743 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.properties
+++ b/external/source-build/build.properties
@@ -346,3 +346,6 @@ trilead-ssh2.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modul
 
 #ha-api
 ha-api.svn.url=https://svn.java.net/svn/glassfish~svn/tags/ha-api-3.1.8
+
+#schema2beans
+schema2beans.svn.url=https://svn.java.net/svn/glassfish~svn/trunk/external/modules/schema2beans/RELEASE55
