add schema2beans build to build.xml. add schema2beans to checkout-sources.xml.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@45744 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/external/source-build/build.xml
+++ b/external/source-build/build.xml
@@ -20,6 +20,7 @@
 	<ant antfile="commons-codec.xml" target="build" />
 	<ant antfile="felix-build.xml" target="build" />
         <ant antfile="servlet-2.5-build.xml" />
+        <ant antfile="schema2beans.xml" />
         <antcall target="jaxb.project" />
         <antcall target="management-api.project"/>
         <antcall target="gmbal.project"/>
@@ -74,10 +75,9 @@ script.xml requires native build
         <!-- Must come after jsp and wsit -->
         <ant antfile="javahelp.xml" target="build" />
 		
-		<!-- external modules used by cmp -->
-		<ant antfile="dbschema.xml" target="build" />
-		<ant antfile="antlr.xml" target="build" />
-		
+	<!-- external modules used by cmp -->
+	<ant antfile="dbschema.xml" target="build" />
+	<ant antfile="antlr.xml" target="build" />
 
     </target>
 
