modify pom for deployment to maven.java.net -add reference to net.java:jvnet-parent -add elements: organization, issueManagement and mailingLists to comply with Maven central requirement. -add property for hk2.version -remove repositories and distributionManagement elements since all dependencies are available on Maven central.
git-svn-id: svn+ssh://svn.java.net/glassfish~svn/trunk@48747 6f3ba3e3-413c-0410-a8aa-90bee3ab43b5

--- a/api/ha-api/pom.xml
+++ b/api/ha-api/pom.xml
@@ -3,7 +3,7 @@
 /* 
 * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER. 
 * 
-* Copyright 1997-2010 Sun Microsystems, Inc. All rights reserved. 
+* Copyright 1997-2011 Sun Microsystems, Inc. All rights reserved. 
 * 
 * The contents of this file are subject to the terms of either the GNU 
 * General Public License Version 2 only ("GPL") or the Common Development 
@@ -38,6 +38,12 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>net.java</groupId>
+        <artifactId>jvnet-parent</artifactId>
+        <version>1</version>
+    </parent>
+
     <groupId>org.glassfish.ha</groupId>
     <artifactId>ha-api</artifactId>
     <version>3.1.9-SNAPSHOT</version>
@@ -60,8 +66,45 @@
         </developer>
     </developers>
 
+    <organization>
+        <name>Oracle Corporation</name>
+        <url>http://www.oracle.com</url>
+    </organization>
+
+    <issueManagement>
+        <system>IssueTracker</system>
+        <url>http://java.net/jira/browse/GLASSFISH</url>
+    </issueManagement>
+
+    <mailingLists>
+        <mailingList>
+            <name>dev</name>
+            <subscribe>http://java.net/projects/glassfish/lists</subscribe>
+            <post>dev@glassfish.java.net</post>
+            <archive>http://java.net/projects/glassfish/lists/dev/archive</archive>
+        </mailingList>
+        <mailingList>
+            <name>users</name>
+            <subscribe>http://java.net/projects/glassfish/lists</subscribe>
+            <post>users@glassfish.java.net</post>
+            <archive>http://java.net/projects/glassfish/lists/users/archive</archive>
+        </mailingList>
+        <mailingList>
+            <name>issues</name>
+            <subscribe>http://java.net/projects/glassfish/lists</subscribe>
+            <post>issues@glassfish.java.net</post>
+            <archive>http://java.net/projects/glassfish/lists/issues/archive</archive>
+        </mailingList>
+        <mailingList>
+            <name>commits</name>
+            <subscribe>http://java.net/projects/glassfish/lists</subscribe>
+            <post>commits@glassfish.java.net</post>
+            <archive>http://java.net/projects/glassfish/lists/commits/archive</archive>
+        </mailingList>
+    </mailingLists>
+
     <properties>
-        <hk2.version>1.0.36</hk2.version>
+        <hk2.version>1.6.14</hk2.version>
     </properties>
 
     <build>
@@ -104,8 +147,9 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>com.sun.enterprise</groupId>
+                <groupId>org.glassfish.hk2</groupId>
                 <artifactId>osgiversion-maven-plugin</artifactId>
+                <version>${hk2.version}</version>
                 <executions>
                     <!-- Since we don't want qualifier like b05 or SNAPSHOT to appear
                          in package version attribute, we use the following goal to
@@ -125,7 +169,7 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>com.sun.enterprise</groupId>
+                <groupId>org.glassfish.hk2</groupId>
                 <artifactId>hk2-maven-plugin</artifactId>
                 <version>${hk2.version}</version>
                 <extensions>true</extensions>
@@ -149,7 +193,7 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>com.sun.enterprise</groupId>
+            <groupId>org.glassfish.hk2</groupId>
             <artifactId>hk2</artifactId>
             <version>${hk2.version}</version>
             <optional>true</optional>
@@ -161,36 +205,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <repositories>
-        <!-- first hits nexus repo for any artifact request, then falls to the next repo in the list / order -->
-        <repository>
-            <id>glassfish-repo-archive</id>
-            <name>Nexus repository collection for Glassfish</name>
-            <url>http://maven.glassfish.org/content/groups/glassfish</url>
-            <snapshots>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <!-- first hits nexus repo for any artifact request, then falls to the next repo in the list / order -->
-        <pluginRepository>
-            <id>glassfish-repo-archive</id>
-            <name>Nexus repository collection for Glassfish</name>
-            <url>http://maven.glassfish.org/content/groups/glassfish</url>
-            <snapshots>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <distributionManagement>
-        <repository>       <!-- internal repository to publish to -->
-            <uniqueVersion>false</uniqueVersion>
-            <id>rator.sfbay</id>
-            <url>dav:http://glassfish-maven-repository.us.oracle.com/maven/repositories/glassfish/</url>
-        </repository>
-    </distributionManagement>
 
 </project>
